Fix case of YAML tag

--- a/66-FM1-59.md
+++ b/66-FM1-59.md
@@ -4,7 +4,7 @@ title: 66-FM1-59
 date: May 12 1966
 from: FM1/Assistant Chief, Mission Planning and Analysis Division
 serial: 66-FM1-59
-Subject: Spacecraft computer program requirements for AS-207/208, AS-503, and AS-504
+subject: Spacecraft computer program requirements for AS-207/208, AS-503, and AS-504
 ---
 On May 13 and 14, 1966, a flock of MSC people met with MIT people in
 Boston to discuss the spacecraft computer program requirements for missions
