Add layout for Tindallgrams

--- a/66-FM1-59.md
+++ b/66-FM1-59.md
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: tindallgram
 title: 66-FM1-59
 date: May 12 1966
 from: FM1/Assistant Chief, Mission Planning and Analysis Division
