--- a/67-FM1-1.md
+++ b/67-FM1-1.md
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: tindallgram
 title: 67-FM1-1
 date: Jan 9 1967
 from: FM/Deputy Chief, Mission Planning and Analysis Division
