Converted to Markdown

--- a/66-FM1-68.md
+++ b/66-FM1-68.md
@@ -1,12 +1,11 @@
-<header>
-    <div class="to">TO: See list below</div>
-    <div class="from">FROM: FM1/Assistant Chief, Mission Planning and Analysis Division</div>
-    <div class="date">DATE: May 31 1966</div>
-    <div class="serial">66-FM1-68</div>
-    <div class="subject">SUBJECT: Apollo spacecraft computer program development newsletter</div>
-</header>
-
-<p>There are a number of us who feel that the computer programs for the 
+---
+layout: tindallgram
+date: May 31 1966
+from: FM1/Assistant Chief, Mission Planning and Analysis Division
+serial: 66-FM1-68
+subject: Apollo spacecraft computer program development newsletter
+---
+There are a number of us who feel that the computer programs for the 
 Apollo spacecraft will soon become the most pacing item for the Apollo 
 flights. This is certainly likely to be the case for AS-207/208, by 
 which time spacecraft, and booster delivery and Cape operations are 
@@ -16,9 +15,9 @@ will still be “sloshing through the mud.” In an attempt to improve
 this situation--I hope improve--I have started to go to MIT a couple 
 of days every week to provide coordination between MIT and MSC. This 
 memorandum is the first of a series I will be dispatching to briefly 
-inform you on what is going on.</p>
+inform you on what is going on.
 
-<p>During the week of May 16, we put primary emphasis on managenent matters. 
+During the week of May 16, we put primary emphasis on managenent matters. 
 During that week, MIT put into effect a new Computer Program 
 Development organization. Basically, what they have done is to put
 Dr. Battin in charge of all computer programming, with four organizational 
@@ -35,9 +34,9 @@ beyond AS-504. You will recall that there has keen some hesitancy on
 their part to augment their staff since they felt they would be phasing 
 out, but apparently they have reached a management decision that they
 will not phase out; and, accordingly, they are willing to hire more 
-people, perhaps augmenting their staff by as many as fifty new people.</p>
+people, perhaps augmenting their staff by as many as fifty new people.
 
-<p>By some stroke of luck, Lyn Dunseith and I took Dick Hanrahan of IBM
+By some stroke of luck, Lyn Dunseith and I took Dick Hanrahan of IBM
 to MIT that week to give them a briefing of our Program Development
 Plan, the management technique which we implemented about a year ago 
 with IBM for the MCC/RTCC, which has enabled us to know the current 
@@ -47,17 +46,17 @@ changes could be made without schedule impact. Dick gave an excellent
 infomal briefing of this technique, which has served both IBM and
 NASA wonderfully, and I hope and expect Mr. Copps will draw heavily 
 on this experience in setting up a similar system at MIT. We have 
-offered every assistance to him in this matter.</p>
+offered every assistance to him in this matter.
 
-<p>I am still very concerned about unnecessary sophistication in the program 
+I am still very concerned about unnecessary sophistication in the program 
 and the effect of this "frosting on the cake" on schedule and 
 storage. It is our intention to go through the entire program, eliminating 
 as much of this sort of thing as possible, I am talking about 
 complete routines, such as "Computer Self-checks", as well as little 
 features, such as including the third and fourth harmonics of the 
-earth's oblateness and drag in programs for the lunar mission.</p>
+earth's oblateness and drag in programs for the lunar mission.
 
-<p>We also intend to maintain tight program control over MIT regarding
+We also intend to maintain tight program control over MIT regarding
 modifications of the AS-504 program for the AS-207/208. It shall be 
 based on the principle that change shall not be made unless absolutely 
 mandatory. Mandatory items are defined as those without which the system 
@@ -67,4 +66,4 @@ even though failing to include these effects will cause propulsion fuel
 to be wasted due to guidance errors. We will find out what the cost
 of flying with a program like this is, and let you know. If it is too 
 expensive, we will make the necessary program changes, but only after 
-readjusting the delivery schedule as necessary.</p>
+readjusting the delivery schedule as necessary.
