--- a/66-FM1-112.md
+++ b/66-FM1-112.md
@@ -1,12 +1,11 @@
-<header>
-    <div class="to">TO: See list</div>
-    <div class="from">FROM: FM/Deputy Chief, Mission Planning and Analysis Division</div>
-    <div class="date">DATE: Sep 21 1966</div>
-    <div class="serial">66-FM1-112</div>
-    <div class="subject">SUBJECT: Apollo rendezvous navigation data edit is too complicated</div>
-</header>
-
-<p>In my notes of the AS-207/208 GSOP meeting with MIT, reference 66-FM1-100 
+---
+layout: tindallgram
+date: Sep 21 1966 
+from: FM/Deputy Chief, Mission Planning and Analysis Division
+serial: 66-FM1-112
+subject: Apollo rendezvous navigation data edit is too complicated
+---
+In my notes of the AS-207/208 GSOP meeting with MIT, reference 66-FM1-100 
 of August 30, I indicated that MIT was including an automatic data edit
 scheme in the rendezvous navigational program for both the LM and the
 CSM. As you recall, this scheme was to accept radar or SXT data automatically 
@@ -23,6 +22,6 @@ some pre-established level of quality - probably light a light when the
 computer is rejecting the data and do away with that central region
 altogether. I have searched my memory and can't recall why MIT proposed
 to do it that way, but unless someone can find a good reason, we should 
-direct MIT to simplify the decision logic as noted above.</p>
+direct MIT to simplify the decision logic as noted above.
 
-<p>Flight Office Branch personnel please take appropriate action immediately.</p>
+Flight Office Branch personnel please take appropriate action immediately.
