--- a/66-FM1-131.md
+++ b/66-FM1-131.md
@@ -1,12 +1,11 @@
-<header>
-    <div class="to">TO: See list</div>
-    <div class="from">FROM: FM/Deputy Chief, Mission Planning and Analysis Division</div>
-    <div class="date">DATE: Oct 10 1966</div>
-    <div class="serial">66-FM1-131</div>
-    <div class="subject">SUBJECT: More on Program Development</div>
-</header>
-
-<p>On October 5th, we had the second of our weekly all day program development 
+---
+layout: tindallgram
+date: Oct 10 1966 
+from: FM/Deputy Chief, Mission Planning and Analysis Division
+serial: 66-FM1-131
+subject: More on Program Development
+---
+On October 5th, we had the second of our weekly all day program development 
 plan meetings at MIT. Most of our attention was ·given to the open
 items on the AS-278 program which I will discuss later: but first I
 would like to pass on some general comments regarding the Work at MIT.
@@ -23,9 +22,9 @@ have several more people scheduled to move into this who they consider
 to be highly qualified and experienced which should help to relieve the
 situation. However, this relief will only be for programs developed
 after AS-278 since that GSOP is currently scheduled for release on
-about October 17th.</p>
+about October 17th.
 
-<p>The other problem areas, as I have noted before, are the computer facilities 
+The other problem areas, as I have noted before, are the computer facilities 
 used for program development -- namely, the 1800's soon to be
 augmented with a IBM360/75. How quickly the new IBM computer will be on
 line continues to be problematical. The pacing item for this is the so-called 
@@ -38,13 +37,13 @@ our intention to continue the development of the justification for augmenting
 this facility for presentation to our management at MSC, probably
 around October 22nd. It is Phil Felleman's estimte that this equipment
 could be operational by about February 15, provided they get the go-ahead 
-by the first of November.</p>
+by the first of November.
 
-<p>Following is a list of the open items associated with the AS-278 mission
-programs:</p>
+Following is a list of the open items associated with the AS-278 mission
+programs:
 
-<ul>
-	<li>1. Manual takeover of the Saturn guidance during boost into orbit.
+
+1. Manual takeover of the Saturn guidance during boost into orbit.
 The AS-278 GSOP presently includes this capability; however, it was
 hastily assembled and a considerable amount of further thought and planning 
 has been carried out at MSC leading to the desire to change that
@@ -52,9 +51,9 @@ formulation. It is my understanding that Guidance and Control Division
 has dispatched the additional information MIT needs to develop this
 spacecraft capability to MSC's satisfaction. MIT has been directed to
 prepare an MRDB -- our change control document defining the work to be
-done and the schedule impact if it is to be done.</li>
+done and the schedule impact if it is to be done.
 
-	<li>2. Trans-lunar injection (TLI). Guidance of the SIVB by the
+2. Trans-lunar injection (TLI). Guidance of the SIVB by the
 command module computer for a simulation of the TLI maneuver on AS-503
 has been proposed. The objective here is to test the interfaces of the
 spacecraft withthe SIVB; it is not considered essential to check out
@@ -75,52 +74,52 @@ we are informed that the all-digital simulation to support testing of
 the Saturn steering is in pretty good shape as a result of the work they
 had done previously. They feel they have a good model of the Saturn
 steering with the IBM guidance equations, gimbal dynamics, etc. This is
-a rigid body representation including no fuel slosh or bending, of course.</li>
+a rigid body representation including no fuel slosh or bending, of course.
 
-<li>3. Lunar orbit insertion (LOI). MIT will prepare an MDRB to include 
+3. Lunar orbit insertion (LOI). MIT will prepare an MDRB to include 
 the LOI guidance if they desire. We informed them that MSC was not
-particularly concerned whether this was included or not.</li>
+particularly concerned whether this was included or not.
 
-<li>4. Stable orbit rendezvous. Jerry Bell (RAB) was scheduled to discuss 
+4. Stable orbit rendezvous. Jerry Bell (RAB) was scheduled to discuss 
 the changes required to the rendezvous guidance with MIT on October
 7th. We decided to delay initiation of the MDRB for this until our
 meeting next week, at which time, hopefully, the definition of this program 
-change will be more definite.</li>
+change will be more definite.
 
-<li>5. LGC DSKY/eight ball discrepancy. MIT was requested to prepare
+5. LGC DSKY/eight ball discrepancy. MIT was requested to prepare
 an MDRB for the addition of the necessary transformations to make the
-computer and FDAI displays compatible.</li>
+computer and FDAI displays compatible.
 
-<li>6. APS and DPS minimum impulse. Aaron Cohen accepted the action
+6. APS and DPS minimum impulse. Aaron Cohen accepted the action
 item of reviewing within MSC the need for providing these capabilities
-in this program. MIT was told not to prepare MDRB's yet.</li>
+in this program. MIT was told not to prepare MDRB's yet.
 
-<li>7. DPS "30 second" maneuver constraint. MSC is also to review the
+7. DPS "30 second" maneuver constraint. MSC is also to review the
 need for eliminating the current constraint on DPS maneuvers within the
 26 to 30 second burn range which are not accurately controlled by the AGC
 due to automatic throttling at that time. MIT was asked to delay preparation 
-of an MDRB until MSC could establish its need.</li>
+of an MDRB until MSC could establish its need.
 
-<li>8. IMU alignment backup. It has been requested that a capability
+8. IMU alignment backup. It has been requested that a capability
 be provided to align the IMU through use of the rendezvous reticle in the
 CSM and the LPD reticle in the LM. This capability is most desirable
 for the lunar mission where loss of the primary alignment systems would
 be extremely serious. MIT has requested to prepare MDRB's for both of
-these.</li>
+these.
 
-<li>9. Reentry landing point targeting. MIT is continuing their investigation 
+9. Reentry landing point targeting. MIT is continuing their investigation 
 as to the earliest time it is possible to load the latitude and
 longitude of the reentry landing point. It is still hoped that procedures 
 may be available for input and verification of these parameters at
 an acceptable time in the mission. If this investigation proves negative,
-MIT will be requested to prepare an MDBR.</li>
+MIT will be requested to prepare an MDBR.
 
-<li>10. Universal update. Action on this item had somehow been overlooked. 
+10. Universal update. Action on this item had somehow been overlooked. 
 It has been our intention to have MIT prepare an MDRB on this
 for some time, but apparently we had failed to request it. Accordingly,
-we did so.</li>
+we did so.
 
-<li>11. Earth orbit navigation. Our old friend was discussed as usual.
+11. Earth orbit navigation. Our old friend was discussed as usual.
 MIT was informed that our direction to delete this capability had been
 recently forwarded to them. MIT stated that they felt it their responsibility 
 as the G&amp;N contractor to formally bring to our attention their
@@ -128,10 +127,10 @@ concern that this action is improper. We jointly agreed that their best
 course of action was to prepare a letter for the ASPO Manager stating
 their position on this matter. I must say I don't feel very strongly one
 way or the other about this, but it certainly is evident that MIT has a
-unanimous, sincere opinion. So do some MSC people.</li>
-</ul>
+unanimous, sincere opinion. So do some MSC people.
 
-<p>I felt this meeting was quite fruitful and the MIT participation was
+
+I felt this meeting was quite fruitful and the MIT participation was
 again very cooperative. We have scheduled the next meeting for October
 13th, and after that one, I might even start to tell you what the program
-delivery schedule actually is. How's that for suspense?</p>
+delivery schedule actually is. How's that for suspense?
