--- a/66-FM1-78.md
+++ b/66-FM1-78.md
@@ -1,16 +1,15 @@
-<header>
-    <div class="to">TO: See list</div>
-    <div class="from">FROM: FM1/Deputy Chief, Mission Planning and Analysis Division</div>
-    <div class="date">DATE: Jul 1 1966</div>
-    <div class="serial">66-FM1-78</div>
-    <div class="subject">SUBJECT: Another Apollo spacecraft computer program status report</div>
-</header>
-
-<p>This is another of my gripping reports on the status of the Apollo spacecraft
+---
+layout: tindallgram
+date: Jul 1 1966
+from: FM1/Deputy Chief, Mission Planning and Analysis Division
+serial: 66-FM1-78
+subject: Another Apollo spacecraft computer program status report
+---
+This is another of my gripping reports on the status of the Apollo spacecraft
 computer programs and the associated matters based on my weekly visit
-to MIT on June 28 and 29.</p>
+to MIT on June 28 and 29.
 
-<p><span class="ul">AS-204</span>: Debugging of the AS-204 program is reaching its final stages
+_AS-204_: Debugging of the AS-204 program is reaching its final stages
 with most of the operational sequences now working. It is anticipated
 that the so-called "B release" tapes should do an adequate job of supporting
 the spacecraft systems tests in the Cape altitude chamber. The
@@ -20,17 +19,17 @@ which is actually just the best assembly of this program existing at
 prethrust and thrust programs for the deorbit maneuver (other similar
 programs are working and so it is expected these will be O.K. very soon)
 and the auto positions of the optics. Many displays have not yet been
-checked for accuracy yet either.</p>
+checked for accuracy yet either.
 
-<p>It is to emphasized that the "B release" is certainly not flight-worthy,
+It is to emphasized that the "B release" is certainly not flight-worthy,
 and there is no intention of using it for that. In addition to
 the fact that programming bugs still exist, it is virtually certain that,
 with improper treatment, the program will bomb out; that is, excessive restrictions
 still exist as to how it must be used by the operator. The
 system should be made more foolproof--if I may use that expression--before
-it is committed to flight.</p>
+it is committed to flight.
 
-<p><span class="ul">AS-205</span>: As you know, every effort is being made to use the final
+_AS-205_: As you know, every effort is being made to use the final
 AS-204 program, as is, for the AS-205 flight, although it is highly
 probable that certain changes will be forced upon us. Of course, this
 is not to suggest that known program deficiencies--bugs--that are uncovered
@@ -38,23 +37,21 @@ after release of the flight tapes for AS-204 will not be corrected.
 I am referring here to the addition of new capabilities. MIT
 presented us with four documented recommendations for deletion of new
 requirements which, if accepted by MSC, would permit using the AS-204
-program. These changes are as follows:</p>
+program. These changes are as follows:
 
-<ul>
+a. Side-force computations during launch phase. It is anticiplated
+that we will accept MIT's recommendation and delete this requirement.
 
-<li>a. Side-force computations during launch phase. It is anticiplated
-that we will accept MIT's recommendation and delete this requirement.</li>
-
-<li>b. The capability for the crew to orient the spacecraft during
+b. The capability for the crew to orient the spacecraft during
 SPS maneuvers in either a heads-up or heads-down attitude. This requirement
 was originally requested for the AS-204 program but was rejected for 
 schedule reasons with the implication that it would be added into the
 AS-205 program. Although final disposition must await discussion 
 with interested MSC personnel, it is our current intention to accept MIT's 
 recommendation and not provide this capability, unless it is mandatory 
-for the mission.</li>
+for the mission.
 
-<li><p>Modification of the program to do the S-16 experiment. This
+c. Modification of the program to do the S-16 experiment. This
 program provides the automatic control of spacecraft attitude to the fine 
 degree of accuracy required to carry out this "trapped particles" experiment. 
 It is anticipated to not be within the astronauts' capability to 
@@ -79,15 +76,15 @@ in the midst of the preflight pad activity after the spacecraft tests
 requiring that rope have been conpleted, Unless the flight schedule 
 slips, it would not be possible to supply the final version of the flight 
 program--that is, all six rope modules in their final configuration--on 
-schedule.</p>
+schedule.
 
-<p>If my understanding of the priority of the experiments is correct,
+If my understanding of the priority of the experiments is correct,
 I would guess that MIT's recommendation to delete this requirement must 
 be rejected and that we will follow their alternate proposal. The obvious 
 disadvantages are that the ropes must be changed on the pad, and, 
-of course, there is the expense of making an additional rope module.</p></li>
+of course, there is the expense of making an additional rope module.
 
-<li>d. Changes to the telemetry down-link in support of the S-17 X-ray
+d. Changes to the telemetry down-link in support of the S-17 X-ray
 astronomy experiment. MIT, through direct conversations with the S-17
 experimenter, have been led to the conclusion that it is possible to obtain 
 the information required without change to the onboard computer program. 
@@ -99,17 +96,16 @@ probable that special ground programs must be developed for use in the
 ACR facility of the MCC to support the real time operations of the experimenter. 
 We were told that somebody in the Flight Control Division 
 is coordinating all of this MCC support, although I personally had never
-heard of it before and neither had Carl Huss.</li>
-</ul>
+heard of it before and neither had Carl Huss.
 
-<p>In summary, it is anticpated that at least two of the four known requests
+In summary, it is anticpated that at least two of the four known requests
 for modification to the AS-204 program to support AS-205 shall be
 deleted, with a third (item "b" above) as a possible candidate. The
 fourth and biggest change will probably have to be made and, as noted
 above, will require the manufacture of an extra rope module to be assembled
-into the spacecraft during final prelaunch activities.</p>
+into the spacecraft during final prelaunch activities.
 
-<p><span class="ul">AS-206</span>: MSC people most expert on the AS-206 mission, including Carl
+_AS-206_: MSC people most expert on the AS-206 mission, including Carl
 Huss of Mission Planning and Analysis Division and Dave Reed of the Flight 
 Control Division, discussed the overall AS-206 program with the MIT people 
 in an attempt to reduce MSC requirements to an absolute minimum for this 
@@ -124,9 +120,9 @@ questions which were taken care of and which should at least permit
 MIT to proceed as quickly and efficiently as possible in their work. 
 Although we did not satisfy our primary objective--that is, schedule improvements--on 
 this occasion, the meeting was extremely valuable in these 
-other respects.</p>
+other respects.
 
-<p><span class="ul">AS-501</span>: One entire day aws spent discussing the AS-501 program, which 
+_AS-501_: One entire day aws spent discussing the AS-501 program, which 
 is also slated for one-month late delivery. As reported in a previous￼￼
 note to you, our apparent best approach for the AS-501 and 502 programs
 was to use the AS-202 program with minimum modification. This is the 
@@ -153,20 +149,20 @@ galling that the "good guys," who have really been doing the job right,
 are forced into the position of seeing their efforts go right down the
 drain, and then to be forced into a crash effort to make up for deficiencies
 with another system. On the other hand, there seems to be no choice 
-in the matter for this particular mission</p>
+in the matter for this particular mission
 
-<p><span class="ul">AS-502</span>: It was our intention to use the AS-501 program virtually
+_AS-502_: It was our intention to use the AS-501 program virtually
 intact for AS-502, however, there were some discussions which were completely
 over my head indicating that this may not be entirely possible,
 particularly associated with the large out-of-plane maneuvers and associated
 special platform alignments required in the AS-502 mission. Carl
 Huss intends to work this over as soon as possible to determine the true
-situation in order to allow us to move on.</p>
+situation in order to allow us to move on.
 
-<p>Other mission programs were not discussed on this visit, and so I
-don't have much of anything to report here.</p>
+Other mission programs were not discussed on this visit, and so I
+don't have much of anything to report here.
 
-<p><span class="ul">Other matters</span>: Shortage of programming development personnel continues
+_Other matters_: Shortage of programming development personnel continues
 to be the most pressing problem at MIT. However, steps are being
 taken at this time which seem, at least partially, effective and so,
 although we should remain concerned and alert, I see no useful action
@@ -174,11 +170,11 @@ for us to take at this time. MIT has been successful in recruiting people
 from within MIT as well as obtaining offers of assistance, including short
 term, from several contractors which will go a long way toward relieving
 this serious situation. Steps are also being taken to clear the building
-of non-software oriented personnel to accommodate the build-up.</p>
+of non-software oriented personnel to accommodate the build-up.
 
-<p>The major item which I am still concerned about and which is not, in 
+The major item which I am still concerned about and which is not, in 
 my opinion, obtaining adequate attention is the Program Development Plan.
 I discussed this with MIT management, informing them, in my opinion, that
 the situation was still entirely unacceptable in all of these areas. If 
 I don't see evidence of real improvement within the next couple of weeks, 
-rest assured that you will hear about it--if you aren't deaf.</p>
+rest assured that you will hear about it--if you aren't deaf.
