--- a/66-FM1-83.md
+++ b/66-FM1-83.md
@@ -1,16 +1,15 @@
-<header>
-    <div class="to">TO: See list</div>
-    <div class="from">FROM: FM/Deputy Chief, Mission Planning and Analysis Division</div>
-    <div class="date">DATE: Jul 11 1966</div>
-    <div class="serial">66-FM1-83</div>
-    <div class="subject">SUBJECT: Apollo rendezvous guidance computer program options report</div>
-</header>
-
-<p>The purpose of this memorandum is to inform you of two special features
+---
+layout: tindallgram
+date: Jul 11 1966
+from: FM/Deputy Chief, Mission Planning and Analysis Division
+serial: 66-FM1-83
+subject: Apollo rendezvous guidance computer program options report
+---
+The purpose of this memorandum is to inform you of two special features
 of the Apollo spacecraft rendezvous guidance computer program you may
-not be aware of since we just added them to the system.</p>
+not be aware of since we just added them to the system.
 
-<p>First of all, you recall that both spacecraft--the CSM and the LEM--
+First of all, you recall that both spacecraft--the CSM and the LEM--
 have rendezvous guidance systems. In order for the computers to determine 
 what maneuvers are required to bring about rendezvous, the basic
 thing each of the computers needs is the state vectors--that is, orbital
@@ -22,9 +21,9 @@ orbit. Also, as the LEM makes maneuvers, the guidance system senses
 them and so there is no need for a pilot input to the computer to inform 
 it that they were made. However, when we consider what's going
 on in the CSM, or in the LEM during a CSM rescue, this doesn't look so
-hot.</p>
+hot.
 
-<p>First of all, the computer may really have a better defined state vector
+First of all, the computer may really have a better defined state vector
 for its own spacecraft, making it more desirable to update the state vector 
 of the other vehicle. Therefore, pilot control is needed over which
 spacecraft state vector should be updated based on the radar and optical
@@ -36,9 +35,9 @@ reason and others, it is also necessary to include in both the CSM and
 LEM computer programs the capability for the pilot to input to the computer 
 the fact that the other spacecraft is making a maneuver such that
 it can be taken into account in maintaining the best current state vector
-of each spacecraft in each spacecraft's computer.</p>
+of each spacecraft in each spacecraft's computer.
 
-<p>Accordingly, both of these options are being provided; that is, the crew
+Accordingly, both of these options are being provided; that is, the crew
 will, inform the computer which spacecraft state vector should be updated
 and he shall also input to the computer all necessary information when the
 other vehicle makes a maneuver. Associated with this latter capability
@@ -52,4 +51,4 @@ to reject all tracking data until the actual ΔV of the maneuver is input.
 He will have to get this information by voice from the other spacecraft
 after the maneuver is executed, of course. This procedure will assure
 that the quantities which are input are the most accurate available and
-should assure that the observational data is used properly.</p>
+should assure that the observational data is used properly.
