--- a/66-FM1-89.md
+++ b/66-FM1-89.md
@@ -1,12 +1,11 @@
-<header>
-    <div class="to">TO: See list</div>
-    <div class="from">FROM: FM/Deputy Chief, Mission Planning and Analysis Division</div>
-    <div class="date">DATE: Jul 11 1966</div>
-    <div class="serial">66-FM1-89</div>
-    <div class="subject">SUBJECT: LEM radar angle bias correction</div>
-</header>
-
-<p>As you know, the rendezvous orbit navigation process involves updating
+---
+layout: tindallgram
+date: Jul 11 1966 
+from: FM/Deputy Chief, Mission Planning and Analysis Division
+serial: 66-FM1-89
+subject: LEM radar angle bias correction
+---
+As you know, the rendezvous orbit navigation process involves updating
 the spacecraft state vector based on the spacecraft radar data. However, 
 the radar apparently has unacceptably large angular bias errors
 for some reason. Instead of fixing the damn radar, someone decided to
@@ -14,9 +13,9 @@ include in the LEM spacecraft computer program the capability of computing
 these radar angle biases at the same time the spacecraft state
 vector is updated. Once these biases have been determined to the computer's 
 satisfaction, they are not updated further; that is, they are
-assumed to remain unchanged thereafter.</p>
+assumed to remain unchanged thereafter.
 
-<p>There is a contingency, however, which would cause them to change, so
+There is a contingency, however, which would cause them to change, so
 I'm told, and that is if the LEM were to undergo loss of pressurization.
 It had been MIT's intention to provide an option in their rendezvous orbit determination program to reinitialize the computer such that it would
 redetermine the radar angle biases in this event. However, in line with
@@ -27,8 +26,8 @@ does not disable the rendezvous guidance system, but rather may cause
 some loss of efficiency in the use of propulsion fuel. Just how much
 depends on when it happens, of course, but the maximum extra cost is
 not expected to exceed about 50 ft/sec. We'll get a better estimate
-of this cost and make sure it's acceptable.</p>
+of this cost and make sure it's acceptable.
 
-<p>Ed Lineberry, how about you getting that done. In the meantime, we're
-telling MIT to take this option out unless we're directed to do otherwise.</p>
+Ed Lineberry, how about you getting that done. In the meantime, we're
+telling MIT to take this option out unless we're directed to do otherwise.
 
