--- a/66-FM1-84.md
+++ b/66-FM1-84.md
@@ -1,18 +1,17 @@
-<header>
-    <div class="to">TO: See list</div>
-    <div class="from">FROM: FM/Deputy Chief, Mission Planning and Analysis Division</div>
-    <div class="date">DATE: Jul 11 1966</div>
-    <div class="serial">66-FM1-84</div>
-    <div class="subject">SUBJECT: Capability to do orbit navigation in earth orbit will not be implemented for AS-207 or AS-504.</div>
-</header>
-
-<p>MIT currently has plans for supplying a number of different modes for
+---
+layout: tindallgram
+date: Jul 11 1966
+from: FM/Deputy Chief, Mission Planning and Analysis Division
+serial: 66-FM1-84
+subject: Capability to do orbit navigation in earth orbit will not be implemented for AS-207 or AS-504.
+---
+MIT currently has plans for supplying a number of different modes for
 using their basic orbit determination program. (MIT calls this process
 "navigation," so I will, too.) These modes differ in that there is a
 variety of types of observational data used during different mission
-phases.</p>
+phases.
 
-<p>In our attempt to simplify the AS-504 spacecraft computer program, we
+In our attempt to simplify the AS-504 spacecraft computer program, we
 are reviewing the overall situation to determine that no unnecessary
 modes are included. For example, there is no need to perform orbit
 navigation while in earth orbit for the lunar mission or any recognized
@@ -25,9 +24,9 @@ directed not to include it in the AS-504 program. Since we do not intend
 to implement any programs especially for AS-207, unless directed
 otherwise, it will be dropped from the AS-207 computer program as well,
 which means that the CSM will not have the capability of determining
-its own orbital elements during that mission.</p>
+its own orbital elements during that mission.
 
-<p>Accordingly, it will not be possible to satisfy that mission objective
+Accordingly, it will not be possible to satisfy that mission objective
 as referenced in TRW document 2132-H008-R8-000, "Mission Requirements
 for Apollo Spacecraft Development Mission AS-207/208" dated March 7,
-1966, classified Confidential.</p>
+1966, classified Confidential.
