--- a/66-FM1-60.md
+++ b/66-FM1-60.md
@@ -4,6 +4,11 @@ date: May 16 1966
 from: FM1/Assistant Chief, Mission Planning and Analysis Division
 serial: 66-FM1-60
 subject: Comments on the AS-207/208 Preliminary Spacecraft Reference Trajectory
+tags:
+    - AS-207
+    - AS-208
+    - TRW
+    - EVA
 ---
 TRW Systems released the AS-207/208 Preliminary Spacecraft Reference
 Trajectory during the first week of May. This report was put together
